# CRUD-software-maintenance

./: .env  .gitignore  config.py  db.py  license.md  makefile  pyproject.toml  readme.md  run.py  server.py  sonar-project.properties
app/: db.py  routes.py  server.py
app/static/css/: admin.css  dashboard.css  login.css
app/static/js/: admin.js  dashboard.js  login.js
app/templates/: admin.html  dashboard.css  dashboard.html  login.html
server/: __init__.py  models.py  routes.py  utils.py
sqlite/: database.db
templates/: dashboard.html  login.js  style.css
